tests/ui/printdoc-binary.stderr
error: byte strings are not supported in formatting macros
 --> $DIR/printdoc-binary.rs:6:15
  |
6 |     printdoc!(b"");
  |               ^^^
